# LigandAI-Official-SDK

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/ligandai/: SKILL.md  fold.md  synthesis.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: Makefile  agents.md  api_reference.md  authentication.md  conf.py  error_codes.md  errors.md  index.md  jobs.md  quickstart.md  resources.md  workflows.md
examples/: 01_quickstart.py  02_end_to_end.py  03_bivalent.py  03b_bivalent_mode1.py  04_async_parallel.py  05_custom_variant.py  06_streaming.py  07_pdb_id_chain_design.py  08_program_list_and_structures.py  09_account_quota_tier.py  10_receptors_search_resolve.py  11_generate_hotspot_cascade.py  12_peptide_listing_search.py  13_structures_listing_pdb_pull.py  14_folds_partition_expand_hotspot.py  15_proteins_upload_variants.py  16_programs_sessions_jobs.py  17_synthesis_adaptyv.py  18_error_handling_tier_gating.py  19_msa_memory_reports_diseases.py  20_parallel_fold_control.py  21_charts_visualization.py  22_goals_planning.py  23_fold_batch.py  24_pae_matrix.py  25_fold_dashboard.py
ligandai/: __init__.py  _constants.py  _dedupe.py  _fold_time_model.py  _hardening.py  _http.py  _version.py  cli.py  client.py  errors.py  fold_calibration.py  fold_charts.py  jobs.py  key_wallet.py  peptide_viewer.py  receptordb.py  types.py  version_check.py
ligandai/resources/: __init__.py  _base.py  account.py  bivalent.py  charts.py  deltaforge.py  discovery.py  diseases.py  folds.py  goals.py  jobs.py  ligands.py  linker_modifications.py  memory.py  msa.py  peptides.py  programs.py  proteins.py  receptors.py  reports.py  structures.py  synthesis.py
skills/: ligandai-codex-skill.ts
skills/claude-agent-sdk/: README.md  ligandai-skill.ts
skills/claude-code/ligandai/: generate.md  program.md
skills/cursor/: .cursorrules  README.md
skills/openai-codex/: tools.json
skills/openai-tool-calling/: README.md  agent_example.py  tools.json
tests/: conftest.py  test_credits_widget.py  test_e2e_fold_instant.py
tests/integration/: __init__.py  test_live_api.py
tests/unit/: test_billing.py  test_client.py  test_comparison_dashboard.py  test_credit_preflight.py  test_dedupe.py  test_deltaforge_score_fold.py  test_errors.py  test_exports.py  test_fold_approach.py  test_fold_calibration.py  test_fold_charts.py  test_folds.py  test_generate_cascade.py  test_generate_flags.py  test_goals.py  test_gpu_rejection.py  test_grouped_fold_batch.py  test_http.py  test_jobs.py  test_peptide_viewer.py  test_peptides_v2.py  test_receptordb.py  test_resources.py  test_tier_caps.py  test_version_check.py  test_wait_durable.py
